[project]
name = "03"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ambrosia>=0.5.1",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "rich>=15.0.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "setuptools<81",
]
